--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "axios": "^1.6.8",
     "react-scroll": "^1.9.0",
-    "sass": "^1.69.7"
+    "sass": "^1.78.0"
   }
 }
