--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Tomas",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -39,6 +39,8 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "axios": "^1.6.8",
+    "express": "^4.21.1",
+    "mongoose": "^8.7.0",
     "react-scroll": "^1.9.0",
     "sass": "^1.78.0"
   }
