--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/server.js"
+    "start": "node --watch src/server.js"
   },
   "keywords": [],
   "author": "",
@@ -19,8 +19,8 @@
   "dependencies": {
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "nodemon": "^3.1.7",
+    "express-validator": "^7.2.0",
+    "googleapis": "^144.0.0",
     "winston": "^3.15.0"
   }
 }
