--- a/server/package.json
+++ b/server/package.json
@@ -1,26 +1,22 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
+  "author": "",
   "main": "index.js",
-  "type": "module",
+  "dependencies": {
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "express-validator": "^7.2.0",
+    "nodemailer": "^7.0.5",
+    "winston": "^3.15.0"
+  },
+  "description": "",
+  "keywords": [],
+  "license": "ISC",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node --watch src/server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "express": "^4.21.1",
-    "mongoose": "^8.7.0",
-    "nodemailer": "^6.9.15"
-  },
-  "dependencies": {
-    "body-parser": "^1.20.3",
-    "cors": "^2.8.5",
-    "express-validator": "^7.2.0",
-    "googleapis": "^144.0.0",
-    "winston": "^3.15.0"
-  }
+  "type": "module"
 }
