--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@types/react-scroll": "^1.8.10",
     "next": "^16.1.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3"
