--- a/client/package.json
+++ b/client/package.json
@@ -3,20 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
-    "@types/react-scroll": "^1.8.10",
-    "@vercel/speed-insights": "^1.3.1",
-    "dotenv": "^17.2.3",
     "next": "^16.1.1",
-    "nodemailer": "^7.0.12",
     "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "winston": "^3.19.0"
+    "react-dom": "^19.2.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -24,13 +19,16 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "axios": "^1.12.2",
+    "@types/react-scroll": "^1.8.10",
+    "@vercel/speed-insights": "^1.3.1",
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
+    "nodemailer": "^8.0.0",
     "react-scroll": "^1.9.3",
     "sass": "^1.92.1",
     "swiper": "^12.0.3",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "winston": "^3.19.0"
   }
 }
