--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -38,6 +38,8 @@
   "exclude": [
     "node_modules",
     "src/app/test/page.test.tsx",
-    "src/app/Desarrollo-Web/_contact/FormContact.tsx"
+    "src/app/Desarrollo-Web/_contact/FormContact.tsx",
+    "src/app/Engineer",
+    "src/app/Analista-Datos"
   ]
 }
